<!--
Copyright (c) 2014, Oracle America, Inc.
All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:

 * Redistributions of source code must retain the above copyright notice,
   this list of conditions and the following disclaimer.

 * Redistributions in binary form must reproduce the above copyright
   notice, this list of conditions and the following disclaimer in the
   documentation and/or other materials provided with the distribution.

 * Neither the name of Oracle nor the names of its contributors may be used
   to endorse or promote products derived from this software without
   specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
THE POSSIBILITY OF SUCH DAMAGE.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.ristovic.benchmarks.nlp</groupId>
    <artifactId>stanfordnlp-preload</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>StanfordNLP CoreNLP example</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Java source/target to use for compilation -->
        <java.version>21</java.version>
        <javac.target>21</javac.target>
        <!-- Name of the benchmark Uber-JAR to generate -->
        <uberjar.name>stanfordnlp-preload</uberjar.name>
        <!-- Version of the GraalVM Build tools to use -->
        <native-buildtools.version>0.10.3</native-buildtools.version>
        <!-- Name of the output binary -->
        <binary.name>stanfordnlp-preload</binary.name>
        <!-- Main class -->
        <main.class>net.ristovic.benchmarks.nlp.Main</main.class>
    </properties>

    <dependencies>
        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>4.4.0</version>
            </dependency>
        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>4.4.0</version>
            <classifier>models</classifier>
            </dependency>
        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>4.4.0</version>
            <classifier>models-english</classifier>
            </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerVersion>${javac.target}</compilerVersion>
                    <source>${javac.target}</source>
                    <target>${javac.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>${uberjar.name}</finalName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${main.class}</mainClass>
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <!--
                                        Shading signed JARs will fail without this.
                                        http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar
                                    -->
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <!-- Lock plugin versions -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.4.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!-- Profile to build the native binary -->
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-buildtools.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <!-- Run the plugin during packaging, allows for native compilation of the application -->
                            <execution>
                                <id>build-native</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <!-- Set a custom name for the output binary file -->
                            <imageName>${binary.name}</imageName>
                            <mainClass>${main.class}</mainClass>
                            <buildArgs>
                                <buildArg>-H:+ObjectSnapshots</buildArg>
                                <buildArg>-H:ObjectSnapshotHeapOffset=524288000</buildArg>
                                <buildArg>--add-opens=java.base/java.util=ALL-UNNAMED</buildArg>
                                <buildArg>--initialize-at-build-time=org.xml.sax.helpers.DefaultHandler</buildArg>
                                <buildArg>--initialize-at-build-time=org.xml.sax.helpers.LocatorImpl</buildArg>
                            </buildArgs>
                       </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!-- Profile to build the instrumented native binary. Run this to generate a profile -->
        <profile>
            <id>instrumented</id>
            <properties>
                <!-- Name of the output binary -->
                <binary-name>${binary.name}-instr</binary-name>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-buildtools.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <!-- Run the plugin during packaging, allows for native compilation of the application -->
                            <execution>
                                <id>build-native</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <!-- Set a custom name for the output binary file -->
                            <imageName>${binary-name}</imageName>
                            <mainClass>${main.class}</mainClass>
                            <buildArgs>
                                <buildArg>-H:+ObjectSnapshots</buildArg>
                                <buildArg>-H:ObjectSnapshotHeapOffset=524288000</buildArg>
                                <buildArg>--add-opens=java.base/java.util=ALL-UNNAMED</buildArg>
                                <buildArg>--initialize-at-build-time=org.xml.sax.helpers.DefaultHandler</buildArg>
                                <buildArg>--initialize-at-build-time=org.xml.sax.helpers.LocatorImpl</buildArg>
                                <buildArg>--pgo-instrument</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!-- Profile to build the optimised native binary -->
        <profile>
            <id>optimised</id>
            <properties>
                <!-- Name of the output binary -->
                <binary-name>${binary.name}-opt</binary-name>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-buildtools.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <!-- Run the plugin during packaging, allows for native compilation of the application -->
                            <execution>
                                <id>build-native</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <!-- Set a custom name for the output binary file -->
                            <imageName>${binary-name}</imageName>
                            <mainClass>${main.class}</mainClass>
                            <buildArgs>
                                <buildArg>-H:+ObjectSnapshots</buildArg>
                                <buildArg>-H:ObjectSnapshotHeapOffset=524288000</buildArg>
                                <buildArg>--initialize-at-build-time=org.xml.sax.helpers.DefaultHandler</buildArg>
                                <buildArg>--initialize-at-build-time=org.xml.sax.helpers.LocatorImpl</buildArg>
                                <buildArg>--add-opens=java.base/java.util=ALL-UNNAMED</buildArg>
                                <buildArg>--pgo=${basedir}/default.iprof</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
